--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ script: 'true'
 
 before_install:
   - npm i -g npm@6.14.9
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
+
 cache:
-  npm: false
+  yarn: true
