--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script: 'true'
 
 before_install:
   - npm i -g npm@6.14.9
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.1.0
   - export PATH="$HOME/.yarn/bin:$PATH"
 
 cache:
