--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,12 @@ before_install:
 
 cache:
   yarn: true
+
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
