--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
   - npm i -g npm@6.14.9
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.1.0
   - export PATH="$HOME/.yarn/bin:$PATH"
+  - sudo apt-get update
+  - sudo apt-get -y install libxml2-dev
 
 cache:
   yarn: true
@@ -22,3 +24,4 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+    update: true
